<resources>
    <string name="app_name">TakeYourMeds</string>
    <string name="title_activity_tagesuebersicht">Tagesübersicht</string>
    <string name="name">Name</string>
    <string name="intake">Einnahme</string>
    <string name="quantity">Menge</string>
    <string name="note">Notiz</string>
    <string name="save">Speichern</string>
    <string name="cancel">Zurück</string>
    <string name="morning">morgens</string>
    <string name="noon">mittags</string>
    <string name="evening">abends</string>
    <string name="value">wert</string>
    <string name="empty">leeren</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="drug_added">Medikament hinzugefügt</string>

    <string name="plan">Einnahmeplan</string>
    <string name="new_medicament">Medikament anlegen</string>
    <string name="list">Medikamentenliste</string>
    <string name="protocol">Einnahmeprotokoll</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="delete_drug_permission">Dieses Medikament entfernen?</string>
    <string name="check_permission">Sind Sie sicher, dass das Medikament eingenommen ist?</string>
    <string name="uncheck_permission">Sind Sie sicher, dass das Medikamente nicht eingenommen ist?</string>
    <string name="delete_protocol_permission">Soll das Protokoll gelöscht werden?</string>
    <string name="delete">Entfernen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="empty_list">noch keine Medikamente eingegeben</string>
</resources>
